--- a/css/styles.css
+++ b/css/styles.css
@@ -15,11 +15,12 @@ body {
 .slide-container {
     max-width: 1120px;
     width: 100%;
-    background-color: gray;
     padding: 40px 0;
 }
 .slide-content {
     margin: 0 40px;
+    overflow: hidden;
+    border-radius: 25px;
 }
 .card {
     border-radius: 25px;
@@ -98,4 +99,36 @@ body {
 }
 .button:hover {
     background: #265DF2;
+}
+.swiper-navBtn {
+    color: #6E93F7;
+    transition: color 0.3s ease;
+}
+.swiper-navBtn:hover {
+    color: #4070F4;
+}
+.swiper-navBtn::before,
+.swiper-navBtn::after {
+    font-size: 40px;
+}
+.swiper-button-next {
+    right: 0;
+}
+.swiper-button-prev {
+    left: 0;
+}
+.swiper-pagination-bullet {
+    background-color: #6E93f7;
+    opacity: 1;
+}
+.swiper-pagination-bullet-active{
+    background-color: #4070f4;
+}
+@media screen and (max-width: 768px) {
+    .slide-content {
+       margin: 0 10px; 
+    }
+    .swiper-navBtn {
+        display: none;
+    }
 }
